# hasty-dev

./: LICENSE  Makefile  README.md  pyproject.toml
audio/: README.md  change_audio_device.py
tests/: test_change_audio_device.py
