[tool.poetry]
name = "hasty-dev"
version = "0.1.0"
description = ""
authors = ["igor-simoes <iigor.simoes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
